fix header css align date

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -14,18 +14,14 @@
   text-align: left;
   display: flex;
   flex-direction: column;
-  font-size: 0.9rem;
+  font-size: 1rem;
   justify-content: center;
-  align-items: center;
+  font-weight: bolder;
   width: 33.33%;
 }
 
 .header-day {
   text-transform: capitalize;
-}
-
-.header-num {
-  margin-top: 0.2rem;
 }
 
 .header-title {
